5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4125/executions/1593_588.log
== TEST (2019-03-28 10:54:10) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = int(input("qual o valor do saque"))
x = valor // 100
x1 = x%100
x50 = x1//50
resto50 = x50%50
x10 = resto50//10

print(x)
print(x50)
print(x10)


-- OUTPUT:
9
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:54:17) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = int(input("qual o valor do saque? "))
x = valor // 100
x1 = x%100
x50 = x1//50
resto50 = x50%50
x10 = resto50//10

print(x)
print(x50)
print(x10)


-- OUTPUT:
9
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:54:27) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = int(input("qual o valor do saque? "))
x = valor // 100
x1 = x%100
x50 = x1//50
resto50 = x50%50
x10 = resto50//10

print(x)
print(x50)
print(x10)


-- EXECUTION TIME:
0.252845
-- TEST CASE 1:
---- input:
990
---- correct output:
9
1
4
---- user output:
9
0
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:57:21) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = int(input("qual o valor do saque? "))
x = valor // 100
x1 = x%100
x50 = x1//50
resto50 = x50%50
x10 = resto50//10

print(x)
print(x50)
print(x10)


-- OUTPUT:
9
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:57:28) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = int(input("qual o valor do saque? "))
x = valor // 100
x1 = x%100
x50 = x1//50
resto50 = x50%50
x10 = resto50//10

print(x)
print(x50)
print(x10)


-- EXECUTION TIME:
0.188417
-- TEST CASE 1:
---- input:
990
---- correct output:
9
1
4
---- user output:
9
0
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:58:20) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = int(input("qual o valor do saque? "))
x = valor // 100
x1 = x%100
x50 = x1//50
resto50 = x1%50
x10 = resto50//10

print(x)
print(x50)
print(x10)


-- OUTPUT:
9
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:58:30) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Use as mensagens de erro para corrigir seu codigo.
valor = int(input("qual o valor do saque? "))
x = valor // 100
x1 = x%100
x50 = x1//50
resto50 = x1%50
x10 = resto50//10

print(x)
print(x50)
print(x10)


-- OUTPUT:
9
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:59:24) 
-- CODE:

valor = int(input("qual o valor do saque? "))
x = valor // 100
valor = x%100
x50 = valor//50
resto50 = x1%50
x10 = resto50//10

print(x)
print(x50)
print(x10)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    resto50 = x1%50
NameError: name 'x1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 10:59:38) 
-- CODE:

valor = int(input("qual o valor do saque? "))
x = valor // 100
valor = x%100
x50 = valor//50
resto50 = x50%50
x10 = resto50//10

print(x)
print(x50)
print(x10)


-- OUTPUT:
9
0
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 10:59:47) 
-- CODE:

valor = int(input("qual o valor do saque? "))
x = valor // 100
valor = x%100
x50 = valor//50
resto50 = x50%50
x10 = resto50//10

print(x)
print(x50)
print(x10)


-- EXECUTION TIME:
0.154862
-- TEST CASE 1:
---- input:
990
---- correct output:
9
1
4
---- user output:
9
0
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:00:56) 
-- CODE:

valor = int(input("qual o valor do saque? "))
x = valor // 100
x100 = x%100
x50 = valor//50
resto50 = x50%50
x10 = resto50//10

print(x)
print(x50)
print(x10)


-- OUTPUT:
9
19
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:01:13) 
-- CODE:

valor = int(input("qual o valor do saque? "))
x = valor // 100
x100 = x%100
x50 = valor//50
resto50 = x50%50
x10 = resto50//10

print(x)
print(x50)
print(x10)


-- EXECUTION TIME:
0.291809
-- TEST CASE 1:
---- input:
990
---- correct output:
9
1
4
---- user output:
9
19
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:01:24) 
-- CODE:

valor = int(input("qual o valor do saque? "))
x = valor // 100
x100 = x%100
x50 = valor//50
resto50 = x50%50
x10 = x50//10

print(x)
print(x50)
print(x10)


-- OUTPUT:
9
19
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:02:36) 
-- CODE:

valor = int(input("qual o valor do saque? "))
x = valor // 100
x100 = x%100
x50 = valor//50
resto50 = x50%50
x10 = resto50/10

print(x)
print(x50)
print(x10)


-- OUTPUT:
9
19
1.9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:02:45) 
-- CODE:

valor = int(input("qual o valor do saque? "))
x = valor // 100
x100 = x%100
x50 = valor//50
resto50 = x50%50
x10 = resto50/10

print(x)
print(x50)
print(x10)


-- EXECUTION TIME:
0.166803
-- TEST CASE 1:
---- input:
990
---- correct output:
9
1
4
---- user output:
9
19
1.9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 11:04:26) 
-- CODE:

valor = int(input("qual o valor do saque? "))

x = valor // 100
x50 = valor % 100
notas10 = x50 // 50
resto10 = x50 % 50
notas2 = resto10 // 10

print(int(x))
print(int(notas10))
print(int(notas2))



-- OUTPUT:
9
1
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 11:04:31) 
-- CODE:

valor = int(input("qual o valor do saque? "))

x = valor // 100
x50 = valor % 100
notas10 = x50 // 50
resto10 = x50 % 50
notas2 = resto10 // 10

print(int(x))
print(int(notas10))
print(int(notas2))



-- EXECUTION TIME:
0.15209
-- TEST CASE 1:
---- input:
990
---- correct output:
9
1
4
---- user output:
9
1
4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
